; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/security/selinux/ss/extr_policydb.c_role_destroy.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/security/selinux/ss/extr_policydb.c_role_destroy.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.role_datum = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i8*, i8*)* @role_destroy to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @role_destroy(i8* %0, i8* %1, i8* %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca %struct.role_datum*, align 8
  store i8* %0, i8** %4, align 8
  store i8* %1, i8** %5, align 8
  store i8* %2, i8** %6, align 8
  %8 = load i8*, i8** %4, align 8
  %9 = call i32 @kfree(i8* %8)
  %10 = load i8*, i8** %5, align 8
  %11 = bitcast i8* %10 to %struct.role_datum*
  store %struct.role_datum* %11, %struct.role_datum** %7, align 8
  %12 = load %struct.role_datum*, %struct.role_datum** %7, align 8
  %13 = getelementptr inbounds %struct.role_datum, %struct.role_datum* %12, i32 0, i32 1
  %14 = call i32 @ebitmap_destroy(i32* %13)
  %15 = load %struct.role_datum*, %struct.role_datum** %7, align 8
  %16 = getelementptr inbounds %struct.role_datum, %struct.role_datum* %15, i32 0, i32 0
  %17 = call i32 @ebitmap_destroy(i32* %16)
  %18 = load i8*, i8** %5, align 8
  %19 = call i32 @kfree(i8* %18)
  ret i32 0
}

declare dso_local i32 @kfree(i8*) #1

declare dso_local i32 @ebitmap_destroy(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
